# BDD-behave_petstore-swagger_API-testing_automation

./: .gitignore  .pre-commit-config.yaml  README.md  behave.ini  config.yaml  environment.py  pyproject.toml
features/: petstore_swagger.feature
petstore_swagger_bdd/: __init__.py  browser.py  context.py
steps/: petstore_api.py
tests/: test_petstore_swagger_bdd.py
